--- a/about.html
+++ b/about.html
@@ -8,23 +8,26 @@
 
 <h2>Links</h2>
 <ul>
-<li><a href="http://code.google.com/p/amphetype/">Project Homepage</a></li>
-<li><a href="http://code.google.com/p/amphetype/wiki/Questions">FAQ</a></li>
-<li><a href="http://code.google.com/p/amphetype/wiki/Backstory">Amphetype's Backstory</a></li>
+<li><a href="https://gitlab.com/franksh/amphetype">Project Homepage</a></li>
+<li><a href="https://gitlab.com/franksh/amphetype/-/wikis/FAQ">FAQ</a></li>
 </ul>
 
-<h2>Other Crap</h2>
-<p>Text files from <a href="http://www.gutenberg.org/wiki/Main_Page">Project Gutenberg</a>.
-Word lists from <a href="http://wordlist.sourceforge.net/scowl-readme">SCOWL</a> by Kevin Atkinson.
-Made with PyQt4 by <a href="http://www.riverbankcomputing.co.uk/">Riverbank Computing</a>, Python bindings
-for the wonderful Qt GUI library by <a href="http://trolltech.com/">Trolltech</a>. Code less, create more
-indeed.</p>
+<h2>Other Stuff</h2>
+<p>Text files
+  from <a href="http://www.gutenberg.org/wiki/Main_Page">Project
+  Gutenberg</a>. Word lists
+  from <a href="http://wordlist.sourceforge.net/scowl-readme">SCOWL</a>
+  by Kevin Atkinson. Made with PyQt4
+  by <a href="http://www.riverbankcomputing.co.uk/">Riverbank
+  Computing</a>, Python bindings for the wonderful Qt GUI library
+  by <a href="http://trolltech.com/">Trolltech</a>. Code less, create
+  more indeed.</p>
 
 <p>Licenced under the <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU v3</a> license.</p>
 
 <small><pre>
     Amphetype - advanced typing program
-    Copyright (C) 2008-2009  Frank Hestvik
+    Copyright (C) 2008-2021  Frank Hestvik
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
