Reworked package layout
* Reworked layout, now provides modules 'amphetype' and
  'amphetype.Widgets'.
* Install makes a script that runs amphetype.main()
* Moved data to amphetype/data/ so they get included in package, no
  more data_files.

Some smaller fixes got sucked up in the change:

* Tweaked CSS files that were missing Q*View styles.
* Fixed an exception when AppLocal/app directory doesn't exist.

Also:

* From this day on, fuck imperative mood commit messages for homemade
  personal projects.

--- a/data/about.html
+++ b/data/about.html
@@ -6,28 +6,40 @@
 
 <p>Made with love by Frank &lt;<a href="mailto:tristesse@gmail.com">tristesse@gmail.com</a>&gt;
 
+For general help, check out
+the <a href="https://gitlab.com/franksh/amphetype/-/wikis/FAQ">FAQ</a>.
+If your question isn't answered, shoot me a message on GitLab or add
+an issue there.
+
 <h2>Links</h2>
 <ul>
-<li><a href="https://gitlab.com/franksh/amphetype">Project Homepage</a></li>
-<li><a href="https://gitlab.com/franksh/amphetype/-/wikis/FAQ">FAQ</a></li>
+  <li><a href="https://gitlab.com/franksh/amphetype">Project Homepage</a></li>
+  <li><a href="https://gitlab.com/franksh/amphetype/-/wikis/FAQ">FAQ</a></li>
+  <li><a href="https://www.gutenberg.org/">Project Gutenberg</a> for
+    more free books in plain text format</li>
 </ul>
 
 <h2>Other Stuff</h2>
 <p>Text files
-  from <a href="http://www.gutenberg.org/wiki/Main_Page">Project
+  from <a href="http://www.gutenberg.org/about/">Project
   Gutenberg</a>. Word lists
   from <a href="http://wordlist.sourceforge.net/scowl-readme">SCOWL</a>
-  by Kevin Atkinson. Made with PyQt4
+  by Kevin Atkinson. Originally made with PyQt4, later PyQt5
   by <a href="http://www.riverbankcomputing.co.uk/">Riverbank
   Computing</a>, Python bindings for the wonderful Qt GUI library
   by <a href="http://trolltech.com/">Trolltech</a>. Code less, create
-  more indeed.</p>
+  more indeed. CSS themes includede are
+  from <a href="https://github.com/GTRONICK/QSS">GTRONICK/QSS</a>
+  GitHub project licensed under MIT. You're encouraged to modify
+  these.</p>
 
-<p>Licenced under the <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU v3</a> license.</p>
+<p>Licenced under
+the <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU v3</a>
+license. See project's LICENSE file for more information.</p>
 
 <small><pre>
     Amphetype - advanced typing program
-    Copyright (C) 2008-2021  Frank Hestvik
+    Copyright (C) 2008-2021  Frank S. Hestvik
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
